# python-project-blueprint

./: .release-please-config.json  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  docs.yaml  publish.yaml  release.yaml
docs/notebooks/: quickstart.ipynb
docs/stylesheets/: extra.css
src/my_package/: __init__.py
