[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-package"
dynamic = ["version"]
description = "TODO: description"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "mypy>=1",
    "ruff>=0.11",
    "pre-commit>=4",
    {include-group = "docs"},
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/my_package/_version.py"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["test"]
